--- a/about.html
+++ b/about.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>About Us</title>
-        <!-- Add something here to fix trademark -->-->
-        </head>
-        <body>
-<h1>About Us</h1>
-<a href="https://www.flickr.com/photos/puliarfanita/22959238329"><img src+"images/polar_bear.jpg" alt="Polar bear">
-</a>
-This site is a sample project for the <strong>awesome</strong> Git Tutorial <a href="https://www.learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em>.</a>
-</p>
-<img src="images/polar_bear.jpg" alt="Polar bear">
-</body>
+  <head>
+    <title>About Us</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <h1>About Us</h1>
+    <a href="https://www.flickr.com/photos/puliarfanita/22959238329"><img src+"images/polar_bear.jpg" alt="Polar bear">
+    </a>
+    This site is a sample project for the <strong>awesome</strong> Git Tutorial <a href="https://www.learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em>.</a>
+    </p>
+    <img src="images/polar_bear.jpg" alt="Polar bear">
+  </body>
 </html>
 
